Fix double scroll (take 2)

--- a/src/client/sass/partials/_full-view.scss
+++ b/src/client/sass/partials/_full-view.scss
@@ -15,7 +15,11 @@
   }
 
   .SnippetContainer {
-      margin-top: 56px;
+    margin-top: 56px;
+
+    .Snippet-code {
+      overflow: hidden;
+    }
 
     .hljs {
       margin-bottom: 0;
